Fix multi-line getting cut off
Fix multi-line getting cut off

--- a/src/styles/core/_changes.scss
+++ b/src/styles/core/_changes.scss
@@ -78,7 +78,7 @@ $deprecated-dark-rounded-svg: $deprecated-svg !default;
 }
 
 @mixin change-highlight-end-spacing() {
-  padding-right: $change-highlight-horizontal-space;
+  padding-right: $change-icon-width + $change-highlight-horizontal-space-rem;
 }
 
 @mixin change-highlight-horizontal-spacing() {
@@ -130,7 +130,7 @@ $deprecated-dark-rounded-svg: $deprecated-svg !default;
 
     &.changed {
       margin-left: rem(-$change-highlight-horizontal-space);
-      width: 100%;
+      width: calc(100% + #{$change-highlight-horizontal-space * 2});
     }
   }
 }
